<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="correo"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="299dp"
        android:layout_height="89dp"
        android:layout_marginTop="56dp"
        android:gravity="center|center_horizontal"
        android:text="@string/p1titulo"
        android:textColor="#191717"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/p1btnab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal"
        android:onClick="presionaBoton"
        android:text="@string/p1actbasic"
        android:textColorHint="#3F51B5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="#000000" />

    <Button
        android:id="@+id/p1btnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="presionaBoton"
        android:text="@string/p2actparce"
        app:layout_constraintEnd_toEndOf="@+id/p1btnab"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/p1btnab"
        app:layout_constraintTop_toBottomOf="@+id/p1btnab" />

    <Button
        android:id="@+id/p1btnar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="presionaBoton"
        android:text="@string/p1actresp"
        app:layout_constraintEnd_toEndOf="@+id/p1btnap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p1btnap"
        app:layout_constraintTop_toBottomOf="@+id/p1btnap" />

    <EditText
        android:id="@+id/p1txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:autofillHints="nombre"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p1ingnombre"
        app:layout_constraintEnd_toEndOf="@+id/p1btnar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/p1btnar"
        app:layout_constraintTop_toBottomOf="@+id/p1btnar"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/p1txtedad"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:autofillHints="edad"
        android:ems="10"
        android:hint="@string/p1ingedad"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#090808"
        app:layout_constraintEnd_toEndOf="@+id/p1txtnombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p1txtnombre"
        app:layout_constraintTop_toBottomOf="@+id/p1txtnombre" />

    <EditText
        android:id="@+id/p1txtcorreo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/p1ingcorreo"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/p1txtedad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p1txtedad"
        app:layout_constraintTop_toBottomOf="@+id/p1txtedad"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>