<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParceActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="333dp"
        android:layout_height="147dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:text="@string/p3titulo"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:gravity="center|center_horizontal"
        android:text="@string/p3informacion"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/p3lblnombre"
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/p3lbledad"
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/p3lblnombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p3lblnombre"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/p3lblcorreo"
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:gravity="center|center_horizontal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/p3lbledad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p3lbledad"
        app:layout_constraintTop_toBottomOf="@+id/p3lbledad" />

    <Button
        android:id="@+id/p3btnregresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="presionaBoton"
        android:text="@string/p3btnregresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>